Refactor SessionService